feat: web interface for Balchivist API

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,8 @@
     "types": [
       "@nuxt/types",
       "@nuxtjs/axios",
+      "@nuxtjs/auth-next",
+      "@nuxtjs/i18n",
       "@types/node"
     ]
   },
